feat: add user profile settings
